--- a/THANKS
+++ b/THANKS
@@ -77,6 +77,7 @@ support in Gnuastro. The list is ordered alphabetically (by family name).
     Ignacio Trujillo                     trujillo@iac.es
     David Valls-Gabaud                   david.valls-gabaud@obspm.fr
     Aaron Watkins                        aaron.watkins@oulu.fi
+    Michael H.F. Wilkinson               m.h.f.wilkinson@gmail.com
     Christopher Willmer                  cnaw@as.arizona.edu
     Sara Yousefi Taemeh                  s.yousefi.t@gmail.com
     Johannes Zabl                        johannes.zabl@irap.omp.eu
